Cascading Change Log

2.0.0 [unreleased]

  Fixed issue where the c.t.h.TemplateTap would not properly remove Hadoop temporary directories on completion.

  Changed the behavior of traps to capture operation argument values instead of all the incoming values so that it is
  simpler to identify the values causing the failure and reduce the data stored in the trap and log files, which
  record a truncated stringified version of the argument tuple.

  Updated c.f.h.MapReduceFlow to allow source/sink/trap create methods to be overridden by a sub-class in order
  to support path identifiers not compatible with the Hadoop FS.

  Changed c.f.FlowProcess increment methods to take a long instead of int type.

  Fixed issue where the c.t.h.TemplateTap would not properly handle pathFields value if set to c.f.Fields.ALL.

  Fixed issue where the c.p.a.AB.CompositeFunction was not getting flushed when planned into a reduce task.

  Renamed c.p.a.Shape to c.p.a.Retain, as it retains given fields, and created c.p.a.Discard to perform the opposite
  function or discarding given fields.

  Added c.o.NoOp operation to allow fields to be dropped from a stream when used with c.t.Fields.SWAP.

  Added c.T.Fields.NONE to denote no fields in a c.t.Tuple.

  Added shutdown hook for the c.c.Cascade class so during jvm shutdown #stop() will be called forcing proper state
  change.

  Changed #stop() to push from c.c.Cascade down through c.f.Flow and c.f.p.FlowStep instances.

  Added new JUnit runner for injecting platform dependencies into c.t.PlatformTestCase subclasses. Subclasses should
  use c.t.PlatformRunner.Platform Annotation to specify relevant c.t.TestPlatform instances.

  Changed test and assertion helper methods on c.t.CascadingTestCase static to remove subclassing requirement.

  Upgraded to support JUnit 4.8.x.

  Changed license from GPLv3 to APLv2.

  Changed c.f.Flow to prevent #complete() from returning while #stop() is executing. Should prevent certain kinds