@@ -21,17 +21,22 @@
 package cascading.tap.local;
 
 import java.io.Closeable;
+import java.io.Flushable;
 import java.io.IOException;
 
 import cascading.flow.local.LocalFlowProcess;
 import cascading.scheme.Scheme;
 import cascading.tuple.TupleEntrySchemeCollector;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  *
  */
-class LocalTupleEntryCollector extends TupleEntrySchemeCollector
+class LocalTupleEntryCollector extends TupleEntrySchemeCollector<Closeable>
   {
+  private static final Logger LOG = LoggerFactory.getLogger( LocalTupleEntryCollector.class );
+
   private final Closeable writer;
 
   public LocalTupleEntryCollector( LocalFlowProcess flowProcess, Scheme scheme, Closeable writer )
@@ -51,11 +56,14 @@ class LocalTupleEntryCollector extends TupleEntrySchemeCollector
 
     try
       {
+      if( writer instanceof Flushable )
+        ( (Flushable) writer ).flush();
+
       writer.close();
       }
     catch( IOException exception )
       {
-      // ignore
+      LOG.error( "unable to close writer, not rethrowing exception", exception );
       }
     }
   }
